add tags to endpoints
